--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.1.1",
-    "gulp-newer": "^1.3.0"
+    "gulp-newer": "^1.3.0",
+    "gulp-preprocess": "^2.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
