--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-htmlclean": "^2.7.8",
     "gulp-imagemin": "^3.1.1",
     "gulp-newer": "^1.3.0",
     "gulp-preprocess": "^2.0.0"
