--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-htmlclean": "^2.7.8",
     "gulp-imagemin": "^3.1.1",
     "gulp-newer": "^1.3.0",
-    "gulp-preprocess": "^2.0.0"
+    "gulp-preprocess": "^2.0.0",
+    "gulp-size": "^2.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
