--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+.sass-cache/
+css/*.map
 node_modules/
 js/vendor/
 css/font-awesome-4.6.3/
